integrate gl-matrix.

--- a/main.html
+++ b/main.html
@@ -75,6 +75,7 @@
         }
         </style>
         <script src="canvas-plot.js"></script>
+        <script src="gl-matrix.js"></script>
     </head>
     <body>
     <div id="embedded-view">
