minor styling tweaks.

--- a/main.html
+++ b/main.html
@@ -45,7 +45,6 @@
             background-color: rgba(0,0,0,0.60);
             width: 100px;
             padding: 2px;
-            border-radius: 5px;
         }
 
         .controls {
@@ -54,7 +53,7 @@
             left: 0px;
             right: 0px;
             padding: 2px;
-            background-color: rgba(0,0,0,0.60);
+            background-color: #333;
         }
 
         .btn {
@@ -79,7 +78,7 @@
     </head>
     <body>
     <div id="embedded-view">
-        <canvas id="canvas-widget" width="632" height="368"></canvas>
+        <canvas id="canvas-widget" width="632" height="334"></canvas>
         <div class="title">
             <header>Figure 1</header>
         </div>
