--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         <style>
         body {
           background-color: #F8F8F8;
-          font-family: 'Open Sans', sans-serif;
+          font-family: 'open sans', arial;
           font-size: 14px;
           font-weight: normal;
           line-height: 1.2em;
@@ -37,14 +37,14 @@
             top: 0px;
             left: 0px;
             right: 0px;
-            padding: 10px;
+            padding: 8px;
         }
 
         .title header {
-            color: #fff;
-            background-color: rgba(0,0,0,0.60);
+            color: #ddd;
+            background-color: rgba(0,0,0,0.7);
             width: 100px;
-            padding: 2px;
+            padding: 4px 0px 4px 12px;
         }
 
         .controls {
@@ -61,6 +61,7 @@
             height: 30px;
             color: #fff;
             background-color: #333;
+            border: 0px none;
         }
 
         .play-icon {
