--- a/main.html
+++ b/main.html
@@ -56,6 +56,10 @@
             background-color: #333;
         }
 
+        button, input[type='button'], input[type='range'] {
+            cursor: pointer;
+        }
+
         .btn {
             width: 30px;
             height: 30px;
@@ -84,7 +88,7 @@
             <header id="title-widget">Title</header>
         </div>
         <div id="controls-wrapper" class="controls">
-            <button id="play-widget" class="btn" onclick="plt.toggle();">
+            <button id="play-widget" class="btn" onclick="plt.toggle();" type="button">
                 <div class="play-icon">
                     <svg viewBox="0 0 20 20" preserveAspectRatio="xMidYMid">
                     <polygon class="fill" points="1,0 20,10 1,20"></polygon>
