--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
             position: absolute;
             top: 0px;
             left: 0px;
-            padding: 8px;
+            padding: 8px 0px 0px 8px;
         }
 
         .title header {
