removed onclick attribute from play-widget.

--- a/main.html
+++ b/main.html
@@ -121,7 +121,7 @@
             <header id="title-widget">Title</header>
         </div>
         <div id="controls-wrapper" class="controls">
-            <button id="play-widget" class="btn" onclick="plt.toggle();" type="button">
+            <button id="play-widget" class="btn" type="button">
                 <div class="play-icon">
                     <svg viewBox="0 0 20 20" preserveAspectRatio="xMidYMid">
                     <polygon class="fill" points="1,0 20,10 1,20"></polygon>
